[package]
name = "simple-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "markdown", "serde-json"] }
axum = "0.6.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
rand = "0.8"
tower-http = { version = "0.4.4", features = ["fs"] }
tower-cookies = "0.9"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"